# CurvatureFilter

./: .gitattributes  .gitignore  CF.h  CMakeLists.txt  DM.h  README.md  ReadMe.txt  main.cpp  main_MultiScale.cpp  makefile
Apps/: SR.cpp  color.cpp  deblur.cpp  dehaze.cpp  denoise.cpp  inpaint.cpp  registration.cpp  vectorize.cpp  video.cpp
CF_On_Mesh/: working.txt
ITK/: CMakeLists.txt  itkCurvatureFilter.h  main.cxx
Matlab/: BernsteinFilter.m  CF.m  GCFilter.m  GCFilter.p  GUI.fig  GUI.m  HalfWindow.m  MCFilter.m  MCFilter.p  MultiscaleCF.m  Solver.m  TVFilter.m  main.asv  main.m
Python/: CurvatureFilter.ipynb  Example-BernsteinFilter.ipynb  Example-GCFilter.ipynb
Python/curvaturefilter/: __init__.py  cf_interface.py  cf_update.py
